--- a/assignment2/report/design.tex
+++ b/assignment2/report/design.tex
@@ -20,6 +20,51 @@ Section~\ref{previous work} gives account of previous work.  Our new
 and exciting results are described in Section~\ref{results}.  Finally,
 Section~\ref{conclusions} gives the conclusions.
 
+\section{Choice of Language}
+
+A fundamental, and early, design choice is selection of implementation
+language.  Our choice is constrained by several factors, in roughly
+descending order of priority:
+
+\begin{description}
+\item[Existing familiarity: ] We have a hard deadline on
+  implementing the design, and the allotted period of time is not
+  particularly long.  Notably, we do not have a significant amount of
+  time to invest in learning new languages, so we must all be somewhat
+  familiar with the language, or at least able to swiftly pick up the
+  necessary knowledge.
+\item[Availability of FUSE bindings: ] No matter the language, we will
+  most likely not have time to develop (and debug) a new set of
+  bindings to FUSE.  The language we choose must thus have an existing
+  (mature) binding.
+\item[Development efficiency: ] As mentioned above, we do not have a
+  lot of time to write the code, so the language choice should be
+  optimised for developer productivity over such things as final
+  program performance.
+\item[Implementation portability: ] According to the assignment,
+  portability to OS X and GNU/Linux is a goal.  Hence, our chosen
+  language must have somewhat mature implementations on both of these
+  systems.
+\item[Safety: ] A filesystem is a central and important construction,
+  and it is important that it is reliable and correct.  We will likely
+  not have time to do heavy testing of our work, and it is therefore
+  desirable that our chosen language provides as many static
+  guarantees of correctness as possible.
+\end{description}
+
+Based on these parameters, we have chosen Python.  We are all somewhat
+familiar with the language, and we have faith in the maturity of its
+FUSE bindings due to the explicit recommendation of Python by the
+course lecturers.  Python is also generally acknowledged as a
+productive language, and the reference implementation (CPython) is
+ported to all relevant platforms.  Python does suffer a bit in the
+area of static safety guarantees, though arguably less so than C
+(another obvious possibility), but significantly more than languages
+such as Haskell or OCaml.
+
+We assume that the possibility of using the Bourne shell scripting
+language is a somewhat morbid joke.
+
 \section{Previous work}\label{previous work}
 A much longer \LaTeXe{} example was written by Gil~\cite{Gil:02}.
 
