--- a/assignment2/report/design.tex
+++ b/assignment2/report/design.tex
@@ -175,10 +175,10 @@ To avoid having to scan the file system for files a list of all the
 files on the system should be kept in memory. Together with each entry
 in the list a date is kept that signify when the cleaner-process
 should analyze the file again. This is a simpler implementation of the
-way it is done in the Elephant file system [Santry99]. When the
-cleaner-process has analyzed the file a new date is created according
-to the findings. The exact intervals at which files should be analyzed
-has to be worked out during testing.
+way it is done in the Elephant file system \cite{Santry:1999gf}. When
+the cleaner-process has analyzed the file a new date is created
+according to the findings. The exact intervals at which files should
+be analyzed has to be worked out during testing.
 
 \section{File system interface}
 
@@ -215,7 +215,7 @@ with the suffix ;* or semicolon followed by a number.
 
 
 \bibliographystyle{abbrv}
-\bibliography{design}
+\bibliography{assignment1}
  
 \end{document}
  
