--- a/assignment2/report/design.tex
+++ b/assignment2/report/design.tex
@@ -141,7 +141,7 @@ happen. Some mechanism to clean out old, unused versions of files must
 therefore be implemented.
 
 We have decided that implementing a cleaner-process as discussed in
-[Santry99] would be the right solution. As the assignment states that
+\cite{319159} would be the right solution. As the assignment states that
 the file system should only be used in the Documents directory, we
 assume that all the files are actually user-created files. We also
 assume that all files in the directory are equally important to keep
